# vapi-hillclimb

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_optimization.sh
_notes/: api_notes.md  design_plan.md  problem_statement.md
results/: evaluation_report.md  examples.md  summary.csv  voice_baseline_scores.csv  voice_examples.md
runs/baseline_20260414T082653/: baseline_assistant_id.txt  baseline_summary.json
runs/baseline_20260414T083715/: baseline_assistant_id.txt  baseline_summary.json
runs/baseline_20260414T094455/: baseline_assistant_id.txt  baseline_summary.json
runs/baseline_20260414T101324/: baseline_assistant_id.txt  baseline_summary.json
runs/baseline_20260414T104334/: baseline_assistant_id.txt  baseline_summary.json
runs/baseline_20260414T104354/: baseline_assistant_id.txt
runs/baseline_20260414T104422/: baseline_assistant_id.txt  baseline_summary.json
runs/optimize_20260414T082832/: final_prompt.txt  optimization_summary.json  optimizer_assistant_id.txt  state.json
runs/optimize_20260414T083847/: final_prompt.txt  optimization_summary.json  optimizer_assistant_id.txt  state.json
runs/optimize_20260414T083847_final/: final_summary.json
runs/optimize_20260414T095237/: final_prompt.txt  optimization_summary.json  optimizer_assistant_id.txt  state.json
runs/optimize_20260414T104603/: final_prompt.txt  optimization_summary.json  optimizer_assistant_id.txt  state.json
runs/optimize_20260414T104603_final/: final_summary.json
runs/spike/: GATE_PASSED  assistant_id.txt  (+2 more)
scripts/: plot.py  spike_chat.py
(+211 files in other folders)
